--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <header class="header">
       <div class="header__menu">
-        <img src="../images/Group.svg" alt="" class="logo">
+        <img src="images/Group.svg" alt="" class="logo">
         <button class="menu__btn">
           <span class="row"></span>
         </button>
